<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_layout"
    android:background="@drawable/gradient_back"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/text_input_linear_layout"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/enter_city_name"
            app:endIconMode="clear_text"
            app:endIconContentDescription="@string/clear"
            app:startIconDrawable="@drawable/search_icon"
            app:startIconContentDescription="@string/search_icon"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:importantForAutofill="no"
                android:inputType="text"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="visible"
        android:id="@+id/spinner"
        android:layout_centerInParent="true">

    </ProgressBar>


    <RelativeLayout
        android:id="@+id/weather_details_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_input_linear_layout"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/background_shape"
        android:visibility="invisible">

        <TextView
            android:id="@+id/city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/city_name"
            android:paddingStart="30dp"
            android:paddingEnd="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColorHint="@color/white"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/weather_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/city_name"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:hint="@string/weather_condition"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColorHint="@color/white"
            android:textSize="20sp" />


        <ImageView
            android:id="@+id/weather_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="-66dp"
            android:layout_toEndOf="@id/city_name"
            android:contentDescription="weather_icon"
            android:scaleType="centerCrop"
            android:src="@drawable/search_icon" />

        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/weather_condition"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:hint="@string/temp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColorHint="@color/white"
            android:textSize="75sp" />

        <TextView
            android:id="@+id/feels_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/temperature"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/feels_like"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColorHint="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/feels_like_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/temperature"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:layout_toEndOf="@id/feels_like"
            android:hint="@string/feels_like_temp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColorHint="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/temp_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/feels_like"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/temp_max"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColorHint="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/temp_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/temp_max"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/temp_min"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColorHint="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/temp_min"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/humidity"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColorHint="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/humidity"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/wind"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColorHint="@color/white"
            android:textSize="18sp" />


    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/current_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ic_location"
        android:contentDescription="@string/current_location"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="70dp"/>



</RelativeLayout>